--- a/student/reserve/reserve.component.html
+++ b/student/reserve/reserve.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<!-- <div class="background">
   <div class="container mt-5 px-2">
     <button
       type="button"
@@ -80,4 +80,4 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
