--- a/student/student.component.scss
+++ b/student/student.component.scss
@@ -1,15 +1,15 @@
-
-
- .w3-bar{
-    background-color: rgb(247, 245, 223);
+.w3-bar{
+    background-color: rgb(237, 237, 237);
 
 }
-.w3-top{
-    background-color: rgb(197, 243, 243);
+.w3-card {
+    background-color: rgb(246, 246, 246);
+
 }
+
 .my-custom-scrollbar {
     position: relative;
-    height: 65vh;
+    height: 74.5vh;
     overflow: auto;
     }
     .table-wrapper-scroll-y {
