--- a/admin/books-list/books-list.component.html
+++ b/admin/books-list/books-list.component.html
@@ -1,147 +1,180 @@
-<div class="background">
-  <div class="container mt-5 px-2">
-    <button mat-button mat-dialog-close>Close</button>
-  </div>
+<div class="container mt-2">
+  <button mat-button mat-dialog-close style="color: red">Close</button>
+</div>
 
-  <div class="container mt-5 px-2">
-    <div class="mb-2 d-flex justify-content-between align-items-center">
-      <div class="position-relative">
-        <span class="position-absolute search"><i class="search"></i> </span>
-        <button>
-          <form [formGroup]="form">
-            <input
-              type="search"
-              required
-              class="form-control w-100"
-              placeholder="Search..."
-              (input)="filter()"
-            />
-          </form>
-        </button>
-      </div>
-      <button
-        mat-button
-        color="primary"
-        (click)="openDialogWithTemplateRef(myDialog)"
-      >
-   Add Book!
+<div class="container mt-5 px-2">
+  <div class="mb-2 d-flex justify-content-between align-items-center">
+    <div class="position-relative">
+      <span class="position-absolute search"><i class="search"></i> </span>
+      <button>
+        <form [formGroup]="form">
+          <input
+            type="search"
+            required
+            class="form-control w-100"
+            placeholder="Search..."
+            (input)="filter()"
+          />
+        </form>
       </button>
     </div>
-    <ng-template #myDialog>
-      <h2 matDialogTitle>Dialog!</h2>
+    <button
+      mat-button
+      color="primary"
+      (click)="openDialogWithTemplateRef(myDialog1)"
+    >
+      Add Books Automatically!
+    </button>
+
+    <ng-template #myDialog1>
+      <h2 matDialogTitle>ADD Books Automatically!</h2>
       <mat-dialog-content>
-      
         <div class="background">
-          <div class="col-md-6 ">
-            <div class="container mt-5 px-2">
-              <div class="mb-4 d-flex justify-content-between align-items-center">
+          <div class="col-md-6">
+            <!-- <div
+                class="mb-4 d-flex justify-content-between align-items-center"
+              >
                 <div class="position-relative">
                   <form [formGroup]="form">
-                    <div class="mb-3">
-                      <h3>Book Name</h3>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                      <mat-label>Search</mat-label>
                       <input
                         type="text"
-                        class="form-control"
-                        id="BookName"
-                        formControlName="BookName"
-                        placeholder="Book Name"
-                        minlength="2"
+                        matInput
+                        formControlName="search"
+                        (input)="filter()"
+                        [matAutocomplete]="auto"
                       />
-                    </div>
-                    <div class="mb-3">
-                      <h3>Author</h3>
-                      <input
-                      formControlName="Name"
-                        type="text"
-                        class="form-control"
-                        id="Name"
-                        placeholder="Author Name"
-                        required
-                      />
-                    </div>
-        
-                    <hr />
-                    <button
-                      type="button"
-                      class="btn btn-light"
-                      href="#"
-                      routerLinkActive="active"
-                      ariaCurrentWhenActive="page"
-                      (click)="goToAddbooks()"
-                    >
-                      Generate a new book manually!
-                    </button>
-                    <br>
-                    <hr>
-                    <button
-                    type="button"
-                    class="btn btn-primary"
-                    href="#"
-                    routerLinkActive="active"
-                    ariaCurrentWhenActive="page"
-        
-                  >
-                    Generate a new book automatically!
-                  </button>
+                      <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of allData" [value]="option">
+                          <div (click)="display(option)">
+                            {{ option.volumeInfo.title }}
+                          </div>
+                        </mat-option>
+                      </mat-autocomplete>
+                    </mat-form-field>
 
-                 
+                    <hr />
                   </form>
+                  <div *ngFor="let data of displayData">
+                    <h1>{{ data.volumeInfo.title }}</h1>
+                    <h2>{{ data.volumeInfo.authors[0] }}</h2>
+                    <p>{{ data.volumeInfo.description }}</p>
+                    <img src="{{ data.volumeInfo.imageLinks.thumbnail }}" />
+                  </div>
                 </div>
-              </div>
+              </div> -->
+
+
+              
+          </div>
+        </div>
+      </mat-dialog-content>
+    </ng-template>
+    <button
+      mat-button
+      color="light"
+      (click)="openDialogWithTemplateRef(myDialog)"
+    >
+      Add Books Manually!
+    </button>
+  </div>
+  <ng-template #myDialog>
+    <h2 matDialogTitle>ADD Books Manually!</h2>
+    <mat-dialog-content>
+      <div class="background">
+        <div class="col-md-6">
+          <div class="mb-4 d-flex justify-content-between align-items-center">
+            <div class="position-relative">
+              <form [formGroup]="form">
+                <div class="mb-3">
+                  <h3>Book Name</h3>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="BookName"
+                    formControlName="BookName"
+                    placeholder="Book Name"
+                    minlength="2"
+                  />
+                </div>
+                <div class="mb-3">
+                  <h3>Author</h3>
+                  <input
+                    formControlName="Name"
+                    type="text"
+                    class="form-control"
+                    id="Name"
+                    placeholder="Author Name"
+                    required
+                  />
+                </div>
+
+                <hr />
+                <button
+                  type="button"
+                  class="btn btn-light"
+                  href="#"
+                  routerLinkActive="active"
+                  ariaCurrentWhenActive="page"
+                >
+                  Generate a new book manually!
+                </button>
+              </form>
             </div>
           </div>
         </div>
-        
-
-
-      </mat-dialog-content>
-    </ng-template>
-    <div class="scss">
-      <div class="mat-elevation-z8">
-        <table class="table table-responsive table-borderless">
-          <thead>
-            <tr class="bg-light">
-              <th scope="col" width="21.1%">Book Title</th>
-              <th scope="col" width="21.1%">Author</th>
-
-              <th scope="col" width="21.1%">
-                <span>Edit</span>
-              </th>
-            </tr>
-          </thead>
-          <tbody *ngFor="let item of data">
-            <tr>
-              <td>{{ item.BookName }}</td>
-              <td>{{ item.Name }}</td>
-
-              <td class=" ">
-                <button
-                  mat-raised-button
-                  type="button"
-                  class="btn btn-primary mr-1"
-                  (click)="goToEdit(item)"
-                >
-                  EDIT
-                </button>
-
-                <button
-                  mat-raised-button
-                  (click)="setShowModal(true, item)"
-                  type="button"
-                  class="btn btn-danger"
-                >
-                  DELETE
-                </button>
-              </td>
-            </tr>
-            <p class="color">
-              {{ dateVal | date : "d/M/y HH:mm:ss" }}
-            </p>
-            <hr />
-            <thead></thead>
-          </tbody>
-        </table>
       </div>
+    </mat-dialog-content>
+  </ng-template>
+  <div class="scss">
+    <div class="table-wrapper-scroll-y my-custom-scrollbar">
+      <table class="table table-bordered table-striped mb-0">
+        <thead>
+          <tr class="bg-light">
+            <th scope="col" width="21.1%">Time</th>
+            <th scope="col" width="21.1%">Book Title</th>
+            <th scope="col" width="21.1%">Author</th>
+
+            <th scope="col" width="21.1%">
+              <span>Edit</span>
+            </th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let item of data">
+          <tr>
+            <td>
+              <p class="color">
+                {{ dateVal | date : "d/M/y HH:mm:ss" }}
+              </p>
+            </td>
+            <td>{{ item.BookName }}</td>
+            <td>{{ item.Name }}</td>
+
+            <td class=" ">
+              <button
+                mat-raised-button
+                type="button"
+                class="btn btn-primary mr-1"
+                (click)="goToEdit(item)"
+              >
+                EDIT
+              </button>
+
+              <button
+                mat-raised-button
+                (click)="setShowModal(true, item)"
+                type="button"
+                class="btn btn-danger"
+              >
+                DELETE
+              </button>
+            </td>
+          </tr>
+
+          <thead></thead>
+        </tbody>
+      </table>
     </div>
   </div>
 
