--- a/admin/books-list/books-list.component.scss
+++ b/admin/books-list/books-list.component.scss
@@ -24,3 +24,13 @@
 .scss{
     background-color:rgb(243, 235, 235);
 }
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+.my-custom-scrollbar {
+    position: relative;
+    height: 70vh;
+    overflow: auto;
+    }
