--- a/admin/students-list/students-list.component.html
+++ b/admin/students-list/students-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 px-2">
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-button mat-dialog-close style="color:red">Close</button>
   <div class="container mt-5 px-2"></div>
 
   <div class="container mt-5 px-2">
@@ -29,7 +29,7 @@
 
     <ng-template #myDialog>
       <mat-dialog-content>
-        <div class="col-md-6 ">
+        <div class="col-md-6">
           <div class="container mt-2 px-6">
             <h1
               class="mb-5 d-flex justify-content-between align-items-center"
@@ -126,8 +126,8 @@
     </ng-template>
 
     <div class="scss">
-      <div class="mat-elevation-z8">
-        <table class="table table-responsive table-borderless">
+      <div class="table-wrapper-scroll-y my-custom-scrollbar">
+        <table class="table table-bordered table-striped mb-0">
           <thead>
             <tr class="bg-light">
               <th scope="col" width="21.1%">Student Id</th>
@@ -154,15 +154,17 @@
                   EDIT
                 </button>
 
-                <button mat-raised-button type="button" class="btn btn-danger">
-                  DELETE
-                </button>
+                <button
+                mat-raised-button
+                type="button"
+                class="btn btn-danger"
+              >
+                DELETE
+              </button>
               </td>
             </tr>
-            <p class="color">
-              {{ dateVal | date : "d/M/y HH:mm:ss" }}
-            </p>
-            <hr />
+          
+    
             <thead></thead>
           </tbody>
         </table>
@@ -171,4 +173,5 @@
   </div>
 
   <div class="container mt-5 px-2"></div>
+
 </div>
