--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -104,8 +104,7 @@
             <h4 style="color: green">Reserved Books</h4>
             <div class="background">
               <div class="container mt-5 px-2"></div>
-
-              
+              <app-booktable [admin]="true"></app-booktable>
             </div>
 
             <hr />
