--- a/src/app/booktable/booktable.component.scss
+++ b/src/app/booktable/booktable.component.scss
@@ -3,6 +3,13 @@
     height: 280px;
     width: 170px;
 }
+.deactriveCard{
+    margin: 10px;
+    height: 280px;
+    width: 170px;
+    opacity: 50%;
+
+}
 .imageContainer{
     display: flex;
     flex-wrap: wrap;
