--- a/src/app/booktable/preview/preview.component.html
+++ b/src/app/booktable/preview/preview.component.html
@@ -37,6 +37,7 @@
           <button
             mat-button
             class="button"
+            mat-dialog-close
             (click)="reserve(previewService.item)"
           >
             Reserve
