--- a/src/app/homepage/homepage-books/homepage-books.component.html
+++ b/src/app/homepage/homepage-books/homepage-books.component.html
@@ -89,7 +89,7 @@
         <div class="w3-row-padding">
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
-              <app-booktable></app-booktable>
+              <app-booktable [bookMenu]="true"></app-booktable>
             </div>
           </div>
         </div>
