--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -76,13 +76,44 @@
           class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small"
         >
           <p><strong>List of Books!!</strong></p>
-          <div *ngFor="let item of userData.books">
-            <p>{{ item.title }}</p>
-            <p>
-              {{ convertstartDate(item.startDate) | date }} -
-              {{ convertstartDate(item.endDate) | date }}
-            </p>
-            <hr>
+          <div class="table-wrapper-scroll-y my-custom-scrollbar">
+            <table class="table table-bordered table-striped mb-0">
+              <div *ngFor="let item of userData.books">
+                <p>{{ item.title }}</p>
+                <p>
+                  {{ convertstartDate(item.startDate) | date }} -
+                  {{ convertstartDate(item.endDate) | date }}
+                </p>
+
+                <button
+                  mat-raised-button
+                  (click)="openDialogWithTemplateRef(dialog)"
+                >
+                  Return
+                </button>
+                <ng-template #dialog class="dialog">
+                  <h2 matDialogTitle></h2>
+                  <mat-dialog-content>
+                    <h1>Are you sure you wantg to return this book?</h1>
+                    <div class="buttons">
+                      <button
+                        mat-button
+                        class="yesButton"
+                        (click)="return(item)"
+                        mat-dialog-close
+                      >
+                        Yes
+                      </button>
+                      <button mat-button class="noButton" mat-dialog-close>
+                        no
+                      </button>
+                    </div>
+                  </mat-dialog-content>
+                </ng-template>
+
+                <hr />
+              </div>
+            </table>
           </div>
         </div>
       </div>
@@ -91,7 +122,7 @@
         <div class="w3-row-padding">
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
-              <app-booktable></app-booktable>
+              <app-booktable [admin]="false" [student]="true"></app-booktable>
             </div>
           </div>
         </div>
