--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,6 +1,6 @@
 <div class="w3-top">
   <div class="w3-bar">
-    <div class="w3-bar-item w3-button">Ｂ ｏ ｏ ｋ ｓ Ｗ ｏ ｒ ｌ ｄ</div>
+    <div class="w3-bar-item w3-button" (click)="onLogout()">Ｂ ｏ ｏ ｋ ｓ Ｗ ｏ ｒ ｌ ｄ</div>
     <div (click)="onLogout()">
       <a class="w3-bar-item w3-button w3-hide-small"
         ><i class="fa fa-user"></i> LogOut!</a
@@ -122,7 +122,10 @@
         <div class="w3-row-padding">
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
+              <div class="table-wrapper-scroll my-custom-scroll">
+                <table class="table table-bordered table-striped mb-0">
               <app-booktable [admin]="false" [student]="true"></app-booktable>
+                </table></div>
             </div>
           </div>
         </div>
