--- a/src/app/admin/books/books.component.html
+++ b/src/app/admin/books/books.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<!-- <div class="background">
   <div class="col-md-6 offset-md-3">
     <div class="container mt-5 px-2">
       <div class="mb-4 d-flex justify-content-between align-items-center">
@@ -42,4 +42,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
