--- a/src/app/admin/message/message.component.html
+++ b/src/app/admin/message/message.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
   <div class="container mt-2 ">
     <button mat-button mat-dialog-close style="color:red">Close</button>
-  </div>
+  </div> -->
