--- a/src/app/admin/message/new-student/new-student.component.html
+++ b/src/app/admin/message/new-student/new-student.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-6 offset-md-3">
+<!-- <div class="col-md-6 offset-md-3">
   <div class="container mt-5 px-2">
     <h1
       class="mb-5 d-flex justify-content-between align-items-center"
@@ -107,4 +107,4 @@
 </div>
 <div class="mb-5 d-flex justify-content-between align-items-center"></div>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
